[package]
name = "kdtree-wasm"
version = "0.1.0"
authors = ["Kenan Sulayman <kenan@styla.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
kdtree = "0.5.1"
serde = "1.0.100"
serde_derive = "1.0.100"

[dependencies.wasm-bindgen]
version = "^0.2.50"
features = ["serde-serialize"]
